[package]
name = "cli"
version = "0.1.0"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
reqwest =  "0.9"
csv = "1"
serde = "1"
serde_derive = "1"
api = {path = "../api"}

[dependencies.chrono]
features = ["serde"]
version = "0.4"